# career_intelligence_assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/services/: analysis.py  analysis_graph.py  chunking.py  documents.py  embeddings.py  groq_client.py  observability.py  retrieval.py  scorecards.py  structured.py  tailoring.py
app/static/: styles.css
app/templates/: base.html  index.html
evals/: cases.json  prompt_eval.py  prompt_eval_cases.json  run_prompt_eval.py  run_regression.py
tests/: test_app.py  test_prompt_eval.py  test_scorecards.py  test_tailoring_flow.py
