[project]
name = "career-intelligence-assistant"
version = "0.1.0"
description = "Career Intelligence Assistant built with FastAPI, Groq, PostgreSQL, and pgvector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "fastembed>=0.3.6,<1.0.0",
    "groq>=0.18.0,<1.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "psycopg[binary]>=3.2.1,<4.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "pypdf>=5.0.0,<6.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "sqlalchemy>=2.0.32,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
